guestbook-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: guestbook
  labels:
     app: guestbook
     tier: frontend
spec:
#  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
#    targetPort: 3000
  selector:
     app: guestbook
     tier: frontend
