redis-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-master
  labels:
     app: redis
     role: master
     tier: backend
spec:
  ports:
  - port: 6379
    targetPort: redis-server
  selector:
     app: redis
     role: master
     tier: backend
