istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook-istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-istio-gateway
  http:
  - route:
    - destination:
        host: guestbook
        port:
          number: 3000
